Manager tests environment.

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -5,10 +5,12 @@ set(INCLUDES
     Service.hpp
     IAsio.hpp
     IManager.hpp
+    Manager.hpp
 )
 set(SOURCES
     Asio.cpp
     Service.cpp
+    Manager.cpp
 )
 
 find_package(Threads REQUIRED)
