--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -32,8 +32,8 @@ find_package(Boost 1.58.0 COMPONENTS REQUIRED system)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     add_library(RatingServiceLib ${INCLUDES} ${SOURCES})
-    add_executable(${PROJECT_NAME} main.cpp)
-    target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} RatingServiceLib ${CMAKE_THREAD_LIBS_INIT})
+    add_executable(../${PROJECT_NAME} main.cpp)
+    target_link_libraries(../${PROJECT_NAME} ${Boost_LIBRARIES} RatingServiceLib ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
 #TODO:
