--- a/Sources/Tests/CMakeLists.txt
+++ b/Sources/Tests/CMakeLists.txt
@@ -7,9 +7,9 @@ set(SOURCES main.cpp ServiceTests.cpp ManagerTests.cpp WorkerTests.cpp)
 find_package(Threads)
 find_package(GTest REQUIRED)
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
+add_executable(../../${PROJECT_NAME} ${SOURCES} ${INCLUDES})
 target_link_libraries(
-    ${PROJECT_NAME}
+    ../../${PROJECT_NAME}
     ${GTEST_LIBRARIES}
     ${CMAKE_THREAD_LIBS_INIT}
     ${Boost_LIBRARIES}
