--- a/Sources/Tests/CMakeLists.txt
+++ b/Sources/Tests/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 2.8)
 set(INCLUDES Mocks.hpp)
 set(SOURCES main.cpp ServiceTests.cpp ManagerTests.cpp WorkerTests.cpp)
 
+include_directories(../../Sources)
+
 find_package(Threads)
 find_package(GTest REQUIRED)
 
